# PPO_TRPO_PC_implementations

./: .gitignore  README.md  forstupidpeople.txt  pc_simple.py  pyproject.toml  variance_estimation.py
configs/base/algo/: ppo.yaml  trpo.yaml
configs/base/env/: atari.yaml  mujoco.yaml
configs/base/learner/: backprop.yaml
configs/experiments/: ppo_atari.yaml  ppo_mujoco.yaml  trpo_atari.yaml  trpo_mujoco.yaml
pcrl/: __init__.py  buffer.py  config.py  device.py  envs.py  logger.py  run_utils.py  seeding.py
pcrl/agents/: __init__.py  base.py  ppo.py  trpo.py
pcrl/learners/: __init__.py  backprop.py  base.py
pcrl/networks/: __init__.py  base.py  factory.py  mlp.py  nature_cnn.py
scripts/: evaluate.py  plot.py  plot_sweep.py  sweep.py  train.py
